--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.11</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>2.1.4</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
