--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,15 @@
 			<version>2.1.4</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.16</version>
+			<scope>provided</scope>
+		</dependency>
+
+		
 	</dependencies>
 
 	<build>
