pom: added com.auth0

--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,12 @@
 			<scope>provided</scope>
 		</dependency>
 
-		
+		<!-- https://mvnrepository.com/artifact/com.auth0/mvc-auth-commons -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>mvc-auth-commons</artifactId>
+			<version>1.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
