application.properties: value for auth0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# Modify auth0 value accordingly
+com.auth0.clientId=FT9juMV
+com.auth0.clientSecret=UFod_0y
+com.auth0.audience=https://sample.auth0.com/api/v2/
+com.auth0.issuer=https://sample.auth0.com/
+com.auth0.token.url=https://sample.auth0.com/oauth/token
