Test constructing a JSON message

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
 			<artifactId>java-jwt</artifactId>
 			<version>3.11.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20201115</version>
+		</dependency>
 
 	</dependencies>
 
